openshift/templates/namespace.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: classquiz-namespace
  annotations:
    description: "Template for creating the classquiz namespace with labels and resource quotas"
    tags: "namespace,classquiz"
objects:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: ${NAMESPACE}
    labels:
      app: classquiz
      environment: ${ENVIRONMENT}
    annotations:
      openshift.io/description: "Namespace for ClassQuiz application"
      openshift.io/display-name: "ClassQuiz"
parameters:
- name: NAMESPACE
  description: "The name of the namespace to create"
  value: classquiz
  required: true
- name: ENVIRONMENT
  description: "The environment (dev, test, prod)"
  value: dev
  required: true

message: |-
  Namespace ${NAMESPACE} has been processed:
  - Created/validated namespace with labels and annotations
  - Created/validated namespace with labels and annotations

post:
- oc get namespace ${NAMESPACE} -o yaml
