openshift/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classquiz-backend
spec:
  selector:
    app: classquiz-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
