openshift/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classquiz-frontend
spec:
  selector:
    app: classquiz-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
