openshift/templates/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  labels:
    app: meilisearch
spec:
  ports:
  - port: 7700
    targetPort: 7700
    name: http
  selector:
    app: meilisearch
