openshift/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: classquiz-redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: classquiz-redis
