openshift/templates/meilisearch-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: meilisearch-network-policy
spec:
  podSelector:
    matchLabels:
      app: meilisearch
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: classquiz-backend
    ports:
    - protocol: TCP
      port: 7700
