openshift/templates/postgresql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-network-policy
  labels:
    app: classquiz-postgresql
spec:
  podSelector:
    matchLabels:
      app: classquiz-postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: classquiz-backend
    ports:
    - protocol: TCP
      port: 5432
