openshift/templates/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  labels:
    app: classquiz-redis
spec:
  podSelector:
    matchLabels:
      app: classquiz-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: classquiz-backend
    ports:
    - protocol: TCP
      port: 6379
